--- a/views/user.html
+++ b/views/user.html
@@ -26,7 +26,9 @@
         <h3 class="simple-text logo-normal"> Mi sitio Web</h3>
       </div>
       <div class="sidebar-wrapper">
+        
         <ul class="nav">
+
           <li class="nav-item">
             <a class="nav-link" href="../index.html">
               <i class="material-icons">dashboard</i>
@@ -41,8 +43,16 @@
             </a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="../views/estadisticas.html">
+              <i class="material-icons">assessment</i>
+              <p>Estadisticas</p>
+            </a>
+          </li>
+
           <!-- your sidebar here -->
         </ul>
+
       </div>
     </div>
     <div class="main-panel">
